Добавляет базовую стилизацию страниц

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,28 @@
-// Начните писать стили здесь
+@import "./fonts.less";
+@import "./global.less";
+@import "variables.less";
+@import "./blocks/main-nav.less";
+@import "./blocks/visually-hidden.less";
+@import "./blocks/promo.less";
+@import "./blocks/series.less";
+@import "./blocks/features.less";
+@import "./blocks/example.less";
+@import "./blocks/slider.less";
+@import "./blocks/contacts.less";
+@import "./blocks/main-footer.less";
+@import "./blocks/content.less";
+@import "./blocks/base-product.less";
+@import "./blocks/button.less";
+@import "./blocks/additional-product.less";
+@import "./blocks/program-selection.less";
+@import "./blocks/form-field-info-cat.less";
+@import "./blocks/form-field-program.less";
+@import "./blocks/form-field-user.less";
+@import "./blocks/form-field-comment.less";
+@import "./blocks/form-field-additionally.less";
+@import "./blocks/form-field-button.less";
+@import "./blocks/main-header.less";
+@import "./blocks/wrapper-mobile.less";
+@import "./blocks/gift.less";
+@import "./blocks/content-user-contact.less";
+@import "./blocks/content-comment.less";
