Доработки к базовой стилизации

--- a/source/less/blocks/base-product.less
+++ b/source/less/blocks/base-product.less
@@ -23,11 +23,19 @@
   color: @special-dark-grey-2;
 }
 
+.base-product__order-link {
+  width: 280px;
+}
+
 .base-product__title {
   font-size: 16px;
   line-height: 20px;
   font-weight: 400;
   text-transform: uppercase;
+}
+
+.base-product__subtitle {
+  font-family: @secondary;
 }
 
 .base-product__row {
