--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -1,8 +1,12 @@
 .gift {
   background-image: url("../img/background-gift.jpg");
+  background-repeat: no-repeat;
+  background-color: @basic-green-second;
+  min-height: 290px;
 }
 
 .gift__slogan {
+  text-align: center;
   font-family: @secondary;
   font-size: 16px;
   line-height: 20px;
