--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,8 +1,9 @@
 @primary: "Oswald", sans-serif;
-@secondary: "Arial" sans-serif;
+@secondary: "Arial", sans-serif;
 @black: #000000;
 @white: #FFFFFF;
 @basic-green: #68B738;
+@basic-green-second: #7fc251;
 @basic-grey: #F2F2F2;
 @gray-light: #EAEAEA;
 @special-dark-grey: #444444;
