--- a/source/less/blocks/additional-product.less
+++ b/source/less/blocks/additional-product.less
@@ -1,7 +1,9 @@
-.content-additional__title {
-  margin-bottom:  36px;
+.additional-product__heading {
+  margin-bottom: 36px;
   padding-right: 20px;
   padding-left: 20px;
+  font-size: 24px;
+  line-height: 26px;
   font-weight: 400;
 }
 
@@ -15,6 +17,7 @@
 }
 
 .additional-product__value {
+  font-family: @secondary;
   font-size: 14px;
   line-height: 14px;
   color: @special-dark-grey;
