--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -1,6 +1,6 @@
-.content__title {
+.main-container__title {
+  margin: 0;
   margin-bottom: 41px;
-  padding-top: 27px;
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
