--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,5 +1,20 @@
 .contacts__wrapper {
-  padding: 26px 20px 26px 20px;
+  padding: 0 20px;
+  height: 112px;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__wrapper {
+  padding: 0 30px;
+  height: 199px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts__wrapper {
+    padding: 0 110px;
+    height: 198px;
+  }
 }
 
 .contacts__welcome {
