--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -1,9 +1,7 @@
-html {
-  height: 100%;
-}
-
-body {
-  margin: 0;
+.page__body {
+  margin: 0 auto;
+  min-height: 100%;
+  width: @mobile-width-only;
   font-family: @primary;
   font-size: 14px;
   line-height: 18px;
