--- a/source/less/blocks/program-selection.less
+++ b/source/less/blocks/program-selection.less
@@ -1,3 +1,19 @@
+.program-selection-wrapper {
+  padding: 0 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .program-selection-wrapper {
+    padding: 0 30px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .program-selection-wrapper {
+    padding: 0 110px;
+  }
+}
+
 .program-selection__title {
   margin-bottom: 37px;
   font-size: 36px;
@@ -5,9 +21,25 @@
   font-weight: 400;
 }
 
+@media (min-width: @tablet-width) {
+  .program-selection__title {
+    margin-bottom: 54px;
+    font-size: 60px;
+    line-height: 60px;
+  }
+}
+
 .program-selection__subtitle {
   margin-bottom: 39px;
   line-height: 18px;
   text-transform: uppercase;
   font-weight: 400;
+}
+
+@media (min-width: @tablet-width) {
+  .program-selection__subtitle {
+    margin-bottom: 66px;
+    font-size: 20px;
+    line-height: 30px;
+  }
 }
