--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,5 +1,7 @@
+// Fonts
 @primary: "Oswald", sans-serif;
 @secondary: "Arial", sans-serif;
+// Colors
 @black: #000000;
 @white: #FFFFFF;
 @basic-green: #68B738;
@@ -8,3 +10,9 @@
 @gray-light: #EAEAEA;
 @special-dark-grey: #444444;
 @special-dark-grey-2: #222222;
+// Viewports
+@mobile-width-only: 767px;
+@tablet-width: 768px;
+@desktop-width: 1200px;
+
+
