--- a/source/less/blocks/additional-product.less
+++ b/source/less/blocks/additional-product.less
@@ -1,10 +1,33 @@
+.additional-product__wrapper-heading {
+  padding: 0 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .additional-product__wrapper-heading {
+    padding: 0 30px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .additional-product__wrapper-heading {
+    padding: 0 110px;
+  }
+}
+
+
 .additional-product__heading {
   margin-bottom: 36px;
-  padding-right: 20px;
-  padding-left: 20px;
   font-size: 24px;
-  line-height: 26px;
+  line-height: 24px;
   font-weight: 400;
+}
+
+@media (min-width: @tablet-width) {
+  .additional-product__heading {
+    margin-bottom: 80px;
+    font-size: 36px;
+    line-height: 36px;
+  }
 }
 
 .additional-product__list {
