--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -1,11 +1,27 @@
 .features__wraper {
+  height: 380px;
   padding: 0 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .features__wraper {
+    height: 689px;
+    padding: 0 30px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .features__wraper {
+    height: 372px;
+    padding: 0 110px;
+  }
 }
 
 .features__title {
   margin-bottom: 40px;
   font-size: 36px;
   line-height: 40px;
+  font-weight: 400;
 }
 
 .features__list {
