--- a/source/less/blocks/form-field.less
+++ b/source/less/blocks/form-field.less
@@ -1,3 +1,17 @@
+.form-field {
+  padding: 0 20px;
+}
+@media (min-width: @tablet-width) {
+  .form-field {
+    padding: 0 30px;
+  }
+}
+@media (min-width: @desktop-width) {
+  .form-field {
+    padding: 0 110px;
+  }
+}
+
 .form-field__group {
   margin-bottom: 24px;
   border: none;
@@ -20,6 +34,13 @@
   font-size: 24px;
   line-height: 26px;
   font-weight: 400;
+}
+
+@media (min-width: @tablet-width) {
+  .form-field__legend {
+    font-size: 36px;
+    line-height: 36px;
+  }
 }
 
 .form-field__textarea {
