--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -2,7 +2,19 @@
   background-image: url("../img/background-gift.jpg");
   background-repeat: no-repeat;
   background-color: @basic-green-second;
-  min-height: 290px;
+  height: 290px;
+}
+
+@media (min-width: @tablet-width) {
+  .gift {
+    height: 200px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .gift {
+    height: 288px;
+  }
 }
 
 .gift__slogan {
