--- a/source/less/blocks/main-container.less
+++ b/source/less/blocks/main-container.less
@@ -1,7 +1,16 @@
 .main-container__title {
   margin: 0;
   margin-bottom: 41px;
+  padding: 27px 20px 0;
   font-size: 36px;
   line-height: 36px;
   font-weight: 400;
+}
+
+@media (min-width: @tablet-width) {
+  .main-container__title {
+    font-size: 60px;
+    line-height: 60px;
+    font-weight: 400;
+  }
 }
