--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,7 +1,44 @@
+
+@media (min-width: @tablet-width) {
+  .main-nav {
+    width: 440px;
+  }
+}
+
+@media (min-width:@desktop-width) {
+  .main-nav {
+    width: 478px;
+  }
+}
+
 .main-nav__list {
   margin: 0;
   padding: 0;
   list-style-type: none;
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 18px;
+    margin-bottom: 12px;
+    padding-left: 94px;
+  }
+}
+
+@media (min-width:@desktop-width) {
+  .main-nav__list {
+    margin-top: 16px;
+    margin-bottom: 13px;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .main-nav__toggle {
+    display: none;
+  }
 }
 
 .menu-list__link {
@@ -12,3 +49,4 @@
   text-decoration: none;
   text-transform: uppercase;
 }
+
