--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,14 +1,30 @@
 .promo__wrapper {
   background-image: url("../img/index-background.jpg");
   background-repeat: no-repeat;
+  height: 480px;
   margin-bottom: 20px;
-  padding-top: 27px;
-  padding-right: 35px;
-  padding-left: 36px;
+  padding: 0 20px;
 }
+
+@media (min-width: @tablet-width) {
+  .promo__wrapper{
+    background-image: none;
+    padding: 0 30px;
+    height: 609px;
+  }
+}
+
+@media (min-width:@desktop-width) {
+  .promo__wrapper {
+    padding: 0 110px;
+    height: 696px;
+  }
+}
+
 
 .promo__title {
   margin-bottom: 25px;
+  width: 249px;
   font-family: @primary;
   font-weight: 400;
   font-size: 36px;
