Добавляет адаптивную сетку крупных блоков главной страницы

--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -2,18 +2,18 @@
   background-image: url("../img/background-gift.jpg");
   background-repeat: no-repeat;
   background-color: @basic-green-second;
-  height: 290px;
+  min-height: 290px;
 }
 
 @media (min-width: @tablet-width) {
   .gift {
-    height: 200px;
+    min-height: 200px;
   }
 }
 
 @media (min-width: @desktop-width) {
   .gift {
-    height: 288px;
+    min-height: 288px;
   }
 }
 
