--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -1,3 +1,13 @@
 .page {
   height: 100%;
 }
+
+.page__body {
+  min-height: 100%;
+  width: @mobile-width;
+  font-family: @primary;
+  font-size: 14px;
+  line-height: 18px;
+  background-color: @white;
+  color: @black;
+}
