--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,9 +1,9 @@
 @import "./fonts.less";
 @import "./blocks/page.less";
-@import "./blocks/page-body.less";
 @import "variables.less";
 @import "./blocks/button.less";
 @import "./blocks/visually-hidden.less";
+@import "./blocks/container.less";
 @import "./blocks/main-header.less";
 @import "./blocks/main-nav.less";
 @import "./blocks/menu-list.less";
