--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -11,7 +11,7 @@
 @special-dark-grey: #444444;
 @special-dark-grey-2: #222222;
 // Viewports
-@mobile-width-only: 767px;
+@mobile-width: 320px;
 @tablet-width: 768px;
 @desktop-width: 1200px;
 
