Добавляет декоративные элементы главной страницы

--- a/source/less/blocks/base-product.less
+++ b/source/less/blocks/base-product.less
@@ -54,7 +54,7 @@
 .base-product__link {
   text-decoration: none;
   text-transform: uppercase;
-  color: @special-dark-grey-2;
+  color: @gray-dark-two;
 }
 
 .base-product__order-link {
@@ -80,5 +80,5 @@
   font-family: @secondary;
   font-size: 12px;
   line-height: 16px;
-  color: @special-dark-grey;
+  color: @gray-dark-two;
 }
