--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -1,4 +1,16 @@
+.copyright {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 163px;
+  margin-top: 28px;
+  margin-bottom: 26px;
+}
+
 .copyright__link {
+  font-family: @secondary;
+  font-size: 16px;
+  line-height: 18px;
   text-decoration: none;
-  color: @special-dark-grey;
+  color: @gray-dark;
 }
