--- a/source/less/blocks/gift.less
+++ b/source/less/blocks/gift.less
@@ -1,7 +1,7 @@
 .gift {
   background-image: url("../img/background-gift.jpg");
   background-repeat: no-repeat;
-  background-color: @basic-green-second;
+  background-color: @green-one;
   min-height: 290px;
 }
 
