--- a/source/less/style.less
+++ b/source/less/style.less
@@ -21,4 +21,5 @@
 @import "./blocks/form-field.less";
 @import "./blocks/gift.less";
 @import "./blocks/copyright.less";
+@import "./blocks/social.less";
 @import "./blocks/field-text.less";
