--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -5,14 +5,18 @@
 @black: #000000;
 @white: #FFFFFF;
 @basic-green: #68B738;
-@basic-green-second: #7fc251;
-@basic-grey: #F2F2F2;
+@green-one: #7fc251;
+@green-two: #5EAA2F;;
+@basic-gray: #F2F2F2;
 @gray-light: #EAEAEA;
-@special-dark-grey: #444444;
-@special-dark-grey-2: #222222;
+@gray-light-two: #E6E6E6;
+@gray-light-three: #D9D9D9;
+@gray-dark: #444444;
+@gray-dark-two: #222222;
 // Viewports
 @mobile-width: 320px;
 @tablet-width: 768px;
+@mobile-width-only: 767px;
 @desktop-width: 1200px;
 
 
