--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,4 +1,5 @@
 .button {
+  display: block;
   padding-top: 10px;
   padding-bottom: 10px;
   margin-bottom: 25px;
@@ -6,10 +7,11 @@
   background-color: @basic-green;
   text-decoration: none;
   text-transform: uppercase;
+  text-align: center;
   font-weight: 400;
 
   &--gray {
-    background-color: @basic-grey;
-    color: @special-dark-grey;
+    background-color: @basic-gray;
+    color: @gray-dark;
   }
 }
