--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -1,13 +1,73 @@
+.contacts {
+  position: relative;
+}
+
+.contacts__wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 26px 26px;
+  background-color: @white;
+}
+
+@media (min-width: @tablet-width) {
+  .contacts__wrapper {
+    padding: 60px 40px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts__wrapper {
+    position: absolute;
+    top: 94px;
+    left: 101px;
+    padding: 56px 80px;
+    width: 565px;
+  }
+}
+
 .contacts__welcome {
+  margin: 0;
   font-size: 16px;
   line-height: 20px;
   text-transform: uppercase;
   font-weight: 400;
 }
 
+@media (min-width: @desktop-width) {
+  .contacts__welcome {
+    font-size: 20px;
+    line-height: 26px;
+  }
+}
+
 .contacts__adress {
+  margin: 0;
   font-family: @secondary;
   font-weight: 400;
   line-height: 20px;
-  color: @special-dark-grey;
+  color: @gray-dark;
+}
+
+@media (min-width: @desktop-width) {
+  font-size: 16px;
+  line-height: 20px;
+}
+
+.contacts iframe {
+  width: 320px;
+  margin: 0 auto;
+  border: none;
+  display: block;
+}
+
+@media (min-width: @tablet-width){
+  .contacts iframe {
+    width: 768px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .contacts iframe {
+    width: 1440px;
+  }
 }
