--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,52 +1,105 @@
+.main-nav {
+  min-height: 36px;
+}
 
 @media (min-width: @tablet-width) {
   .main-nav {
-    width: 440px;
+  display: flex;
+  width: 440px;
   }
 }
 
-@media (min-width:@desktop-width) {
+@media (min-width: @desktop-width) {
   .main-nav {
-    width: 478px;
+    min-height: 40px;
   }
 }
 
 .main-nav__list {
+  display: flex;
+  flex-direction: column;
   margin: 0;
+  margin-left: -1px;
+  margin-top: -2px;
   padding: 0;
   list-style-type: none;
 }
 
 @media (min-width: @tablet-width) {
   .main-nav__list {
-    display: flex;
+    margin: 0;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 18px;
-    margin-bottom: 12px;
-    padding-left: 94px;
   }
 }
 
-@media (min-width:@desktop-width) {
-  .main-nav__list {
-    margin-top: 16px;
-    margin-bottom: 13px;
+
+@media (min-width: @tablet-width) {
+  .main-nav__wrapper {
+    width: 708px;
+    margin: 0 auto;
   }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__wrapper {
+    width: 980px;
+  }
+}
+
+.main-nav__toggle {
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+  display: block;
+  width: 65px;
+  height: 65px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 @media (min-width: @tablet-width) {
-  .main-nav__toggle {
-    display: none;
+.main-nav__toggle {
+  display: none;
   }
 }
 
-.menu-list__link {
-  font-family: @primary;
-  font-weight: 500;
-  line-height: 20px;
-  color: @black;
-  text-decoration: none;
-  text-transform: uppercase;
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+  position: absolute;
+  top: 26px;
+  right: 20px;
+  width: 24px;
+  height: 2px;
+  background-color: @black;
+  box-shadow: 0 8px 0 0 #000000, 0 16px 0 0 #000000;
 }
 
+.main-nav--opened .main-nav__toggle {
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 34px;
+    left: 20px;
+    width: 24px;
+    height: 2px;
+    background-color: @black;
+}
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+}
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+}
+
+@media (max-width: @mobile-width-only) {
+.main-nav--closed .menu-list__item {
+  display: none;
+  }
+}
