--- a/source/less/blocks/page.less
+++ b/source/less/blocks/page.less
@@ -3,8 +3,8 @@
 }
 
 .page__body {
-  min-width: 100%;
-  width: @mobile-width;
+  margin: 0;
+  min-height: 100%;
   font-family: @primary;
   font-size: 14px;
   line-height: 18px;
