--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -2,26 +2,30 @@
   background-image: url("../img/index-background.jpg");
   background-repeat: no-repeat;
   margin-bottom: 20px;
+  position: relative;
 }
-
 @media (min-width: @tablet-width) {
-  .promo__wrapper{
+  .promo__wrapper {
     background-image: none;
   }
 }
 
 .promo__title {
+  margin: 0;
+  margin-top: 27px;
   margin-bottom: 25px;
-  width: 249px;
   font-family: @primary;
   font-weight: 400;
   font-size: 36px;
+  text-align: center;
   line-height: 36px;
   color: @white;
 }
 
 @media (min-width: @tablet-width) {
   .promo__title {
+    width: 416px;
+    text-align: left;
     font-size: 60px;
     line-height: 60px;
     color: @black;
@@ -29,23 +33,57 @@
 }
 
 .promo__slogan {
+  margin: 0;
   margin-bottom: 29px;
   text-transform: uppercase;
+  text-align: center;
   color: @white;
 }
 
 @media (min-width: @tablet-width) {
   .promo__slogan {
+    width: 283px;
+    margin-bottom: 20px;
     font-size: 20px;
     line-height: 20px;
     color: @black;
   }
 }
 
+@media (min-width: @desktop-width) {
+  .promo__slogan {
+    margin-bottom: 52px;
+  }
+}
+
 .promo__link {
-  padding: 7px 44px;
+  margin-top: 3px;
+  padding: 14px 26px;
   text-decoration: none;
   text-transform: uppercase;
   background-color: @basic-green;
   color: @white;
+  &:hover {
+    background-color: @green-two;
+  }
+  &:active {
+    background-color: @green-two;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .promo__link {
+    display: inline-block;
+    position: absolute;
+    top: 347px;
+    left: 181px;
+    padding: 14px 26px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .promo__link {
+    top: 187px;
+    left: 0px;
+  }
 }
